--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
         "laravel/framework": "^6.0",
         "laravel/homestead": "^9.3",
         "laravel/tinker": "^1.0",
+        "league/flysystem": "^1.0",
         "sensiolabs/security-checker": "^6.0",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "victorycto/imageservice": "dev-feature/code-test/image-service"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
@@ -65,9 +67,9 @@
         ]
     },
     "repositories": {
-        "victorycto/sandboxjwc": {
+        "victorycto/imageservice": {
             "type": "path",
-            "url": "/home/vagrant/code/packages/victorycto/sandboxjwc"
+            "url": "packages/victorycto/imageservice"
         }
     }
 }
