--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "victorycto/imageservice": "dev-feature/code-test/image-service"
     },
     "require-dev": {
+        "deployer/deployer": "^6.8",
+        "deployer/recipes": "^6.2",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
